Initializing and adding to save component

--- a/Client/src/app/app.component.html
+++ b/Client/src/app/app.component.html
@@ -13,8 +13,8 @@
 </div>
 <div class = 'upload button'>
   <a href = "localhost:4200/upload">
-    <mat-button>
+    <button>
       Get Started
-    </mat-button>
+    </button>
   </a>
 </div>
