Altering html selector tag

--- a/Client/src/app/app.component.html
+++ b/Client/src/app/app.component.html
@@ -13,7 +13,7 @@
 </div>
 <div class = 'upload button'>
   <a class = 'route-link' [routerLink] = "['/upload']">
-    <button mat-raised-button color="primary">
+    <button (click) = 'onUploadClick()' mat-raised-button color="primary">
       Get Started
     </button>
   </a>
