temporarily removing routing

--- a/Client/src/app/app.component.html
+++ b/Client/src/app/app.component.html
@@ -12,8 +12,10 @@
   </mat-card>
 </div>
 <div class = 'upload button'>
-  <a class = 'route-link' [routerLink] = "['/upload']">
-    <button (click) = 'onUploadClick()' mat-raised-button color="primary">
+  <a href = 'localhost:4200/upload'>
+    <button 
+    mat-raised-button 
+    color="primary">
       Get Started
     </button>
   </a>
