--- a/Client/src/app/app.component.html
+++ b/Client/src/app/app.component.html
@@ -13,10 +13,13 @@
 </div>
 <div class = 'upload button'>
   <a href = 'localhost:4200/upload'>
-    <button 
+    <button class = "getStarted"
     mat-raised-button 
     color="primary">
       Get Started
     </button>
   </a>
+</div>
+<div class = 'container'>
+  <router-outlet></router-outlet>
 </div>
