Adding bootstrap and basic nav bar

--- a/Client/src/app/app.component.html
+++ b/Client/src/app/app.component.html
@@ -1,4 +1,12 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div class = 'container'>
+<nav class="navbar navbar-expand navbar-dark bg-dark">
+  <ul class="nav nav-pills">
+    <a class="route-link" [routerLink]="['/upload']">
+      <li>Upload</li>
+    </a>
+  </ul>
+</nav>
+
+<div>
   <router-outlet></router-outlet>
 </div>
