Adding to navbar

--- a/Client/src/app/app.component.html
+++ b/Client/src/app/app.component.html
@@ -1,5 +1,8 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <nav class="navbar navbar-expand navbar-dark bg-dark">
+  <a class = 'navbar-brand'>
+    {{title}}
+  </a>
   <ul class="nav nav-pills">
     <a class="route-link" [routerLink]="['/upload']">
       <li>Upload</li>
