--- a/Client/src/app/app.component.html
+++ b/Client/src/app/app.component.html
@@ -1,11 +1,14 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <nav class="navbar navbar-expand navbar-dark bg-dark">
-  <a class = 'navbar-brand'>
+  <a class = 'navbar-brand' [routerLink] = "['/welcome']">
     {{title}}
   </a>
   <ul class="nav nav-pills">
-    <a class="route-link" [routerLink]="['/upload']">
-      <li>Upload</li>
+    <a class="route-link" [routerLink]="['/receipts']">
+      <li>Receipts</li>
+    </a>
+    <a class = 'route-link' [routerLink] = "['']">
+      <li></li>
     </a>
   </ul>
 </nav>
