Creating receipt interface

--- a/Client/src/app/receipt/receipt-view/receipt-view.component.html
+++ b/Client/src/app/receipt/receipt-view/receipt-view.component.html
@@ -1,7 +1,10 @@
-<div>
+<div style="text-align: center">
   <mat-card>
     <h1>
-      ReceptView
+      <i class="material-icons">
+        table_chart
+      </i>
+      Your Receipts
     </h1>
   </mat-card>
 </div>
