--- a/Client/src/app/welcome/welcome.component.html
+++ b/Client/src/app/welcome/welcome.component.html
@@ -11,7 +11,7 @@
     </mat-card>
   </div>
   <div class = 'upload button'>
-    <a class = 'route-link' [routerLink] = "['/upload']"  href = 'localhost:4200/upload'>
+    <a class = 'route-link' [routerLink] = "['/receipts']">
       <button class = "getStarted"
       mat-raised-button 
       color="primary">
