Setting up basic receipt filtering

--- a/Client/src/app/receipt/receipt-view/receipt-view.component.html
+++ b/Client/src/app/receipt/receipt-view/receipt-view.component.html
@@ -1,7 +1,7 @@
 <div style="text-align: center">
   <mat-card>
     <h1>
-      <i class="material-icons">
+      <i class="material-icons md-48">
         table_chart
       </i>
       Your Receipts
