Adding save form as entry component

--- a/Client/src/app/receipt/save-form/save-form.component.html
+++ b/Client/src/app/receipt/save-form/save-form.component.html
@@ -1,6 +1,13 @@
 <h1 mat-dialog-title>Upload Receipt</h1>
 <mat-dialog-content>
-  <p>content</p>
+  <form class="save-receipt-form">
+    <mat-form-field>
+      <input matInput placeholder="Receipt Name">
+    </mat-form-field>
+    <mat-form-field>
+      <input matInput placeholder="Receipt Name">
+    </mat-form-field>
+  </form>
 </mat-dialog-content>
 <mat-dialog-actions>
   <button mat-raised-button mat-dialog-close>
@@ -10,4 +17,3 @@
     Upload
   </button>
 </mat-dialog-actions>
-
