--- a/Client/src/app/receipt/save-form/save-form.component.html
+++ b/Client/src/app/receipt/save-form/save-form.component.html
@@ -1,11 +1,12 @@
 <h1 mat-dialog-title>Upload Receipt</h1>
 <mat-dialog-content>
   <form class="save-receipt-form">
-    <mat-form-field>
+    <mat-form-field class = "example-full-width">
       <input matInput placeholder="Receipt Name">
     </mat-form-field>
-    <mat-form-field>
-      <input matInput placeholder="Receipt Name">
+
+    <mat-form-field class = "example-full-width">
+      <input matInput placeholder="Receipt Name" type="text"/>
     </mat-form-field>
   </form>
 </mat-dialog-content>
