Importing the grid list module

--- a/Client/src/app/receipt/save-form/save-form.component.html
+++ b/Client/src/app/receipt/save-form/save-form.component.html
@@ -15,7 +15,7 @@
     -->
     <p>
       <mat-form-field class="example-full-width">
-        <input [(ngModel)]="content" matInput placeholder="Receipt Content" id="receiptName" (keyup)="saveIsEnabled()"
+        <input [(ngModel)]="content" matInput placeholder="Receipt Content" id="receiptContent" (keyup)="saveIsEnabled()"
           required>
         <mat-error>Required</mat-error>
       </mat-form-field>
