--- a/Client/src/app/receipt/receipt-view/receipt-view.component.html
+++ b/Client/src/app/receipt/receipt-view/receipt-view.component.html
@@ -19,7 +19,7 @@
       <div>
         <input type="text" />
       </div>
-      <button class="offset-lg-9" id = "upload" mat-raised-button color="primary" (click)="openDialog()">
+      <button class="offset-lg-9" id="upload" mat-raised-button color="primary" (click)="openDialog()">
         Upload
       </button>
     </div>
@@ -28,12 +28,14 @@
         Back
       </button>
     </a>
-    <h1 *ngIf = "receiptName">
+    <h1 *ngIf="receiptName">
       {{receiptName}}
     </h1>
-    <mat-grid-list *ngIf = "receipts" cols = "4" rowHeight="1:1.5">
-      <mat-grid-tile *ngFor = "let receipt of receipts">
-        <h1>{{receipt.receiptName}}</h1>
+    <mat-grid-list gutterSize="3px" class="receiptObjects" *ngIf="receipts" cols="4" rowHeight="1:1">
+      <mat-grid-tile class="receiptGridObject" *ngFor="let receipt of receipts">
+        <mat-grid-tile-header class = "receiptObjectHeader">
+          <h1>{{receipt.receiptName}}</h1>
+        </mat-grid-tile-header>
         <h4>{{receipt.dateSaved}}</h4>
       </mat-grid-tile>
     </mat-grid-list>
