adding more styling

--- a/Client/src/app/receipt/receipt-view/receipt-view.component.css
+++ b/Client/src/app/receipt/receipt-view/receipt-view.component.css
@@ -3,11 +3,16 @@
 }
 
 .receiptGridObject {
-    padding: 20px;
     color: white;
     background-color:#4f92ff;
+    padding-bottom:10px;
 }
 
 .receiptObjectHeader {
     text-align: center;
+}
+
+.backButton {
+    align-content: flex-end;
+    align-items: flex-end;
 }
