Centering copntinue button on welcme page

--- a/Client/src/app/welcome/welcome.component.html
+++ b/Client/src/app/welcome/welcome.component.html
@@ -16,7 +16,7 @@
 
   </mat-card>
 </div>
-<div class='upload button'>
+<div class='uploadButton'>
   <a class='route-link' [routerLink]="['/receipts']">
     <button class="getStarted" mat-raised-button color="primary">
       Get Started
