Adding bg image for welcome page

--- a/Client/src/app/welcome/welcome.component.html
+++ b/Client/src/app/welcome/welcome.component.html
@@ -16,6 +16,9 @@
 
   </mat-card>
 </div>
+<div class = "background-image">
+  <img src="../static/img/Cloud-bg.png">
+</div>
 <div class='uploadButton'>
   <a class='route-link' [routerLink]="['/receipts']">
     <button class="getStarted" mat-raised-button color="primary">
