Resolving navigation issue

--- a/Client/src/app/receipt/receipt-view/receipt-view.component.html
+++ b/Client/src/app/receipt/receipt-view/receipt-view.component.html
@@ -1,5 +1,5 @@
 <div style="text-align: center">
-  <mat-card>
+  <mat-card class = "title-bar">
     <h1>
       <mat-card-title>
         <i class="material-icons md-48">
