Adding some styling

--- a/Client/src/app/app.component.html
+++ b/Client/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<nav class="navbar navbar-expand navbar-dark bg-dark">
+<nav id = "navbar-top" class="navbar navbar-expand navbar-custom">
   <a class = 'navbar-brand' [routerLink] = "['/welcome']">
     {{title}}
   </a>
