--- a/Client/src/app/welcome/welcome.component.html
+++ b/Client/src/app/welcome/welcome.component.html
@@ -15,10 +15,10 @@
     </mat-card-subtitle>
   </mat-card>
 </div>
-<div class="text-center">
-  <img id = "bg-image" src="/Client/src/assets/images/Cloud-bg.png" class="img-responsive center-block"
+<div class="text-center image-row">
+  <img id = "bg-image" src="https://us.123rf.com/450wm/bloomua/bloomua1310/bloomua131000002/22900811-high-quality-illustration-set-of-modern-technology-devices-computer-monitor-laptop-digital-tablet-an.jpg?ver=6" class="img-responsive center-block"
   alt="A digital cloud; representing DigiCeipt's cloud vision"
-    style="max-height:300px;padding-bottom:50px" />
+  style="max-height:300px;padding-bottom:50px" >
 </div>
 <div class='uploadButton'>
   <a class='route-link' [routerLink]="['/receipts']">
