Implementing REST API backend

--- a/Client/src/app/receipt/receipt-view/receipt-view.component.html
+++ b/Client/src/app/receipt/receipt-view/receipt-view.component.html
@@ -8,7 +8,7 @@
         Your Receipts
         {{this.receiptName}}
         <a class="route-link" [routerLink]="['/welcome']">
-          <button mat-raised-button color="accent" id="backButton">
+          <button mat-raised-button color="primary" id="backButton">
             Back
           </button>
         </a>
@@ -24,7 +24,7 @@
       <div>
         <input type="text" />
       </div>
-      <button id="uploadButton" class="offset-lg-9" id="upload" mat-raised-button color="primary" (click)="openDialog()">
+      <button id="uploadButton" class="offset-lg-9" id="upload" mat-raised-button color="accent" (click)="openDialog()">
         Upload
       </button>
     </div>
