Updating home-page graphics Editing styling and adding more spacing.

--- a/Client/src/app/receipt/receipt-view/receipt-view.component.css
+++ b/Client/src/app/receipt/receipt-view/receipt-view.component.css
@@ -22,6 +22,9 @@
     color: white;
 }
 
+.receiptName {
+    font-size: 20px;
+}
 
 h1 {
     font-family: 'Muli', sans-serif;
@@ -33,6 +36,6 @@ h1 {
 
 
 
-#uploadButton {
-
+.upload-button {
+    padding-left: 10px;
 }
