--- a/Client/src/app/welcome/welcome.component.html
+++ b/Client/src/app/welcome/welcome.component.html
@@ -16,10 +16,13 @@
   </mat-card>
 </div>
 <div class="text-center image-row">
-  <img id = "bg-image" src="https://us.123rf.com/450wm/bloomua/bloomua1310/bloomua131000002/22900811-high-quality-illustration-set-of-modern-technology-devices-computer-monitor-laptop-digital-tablet-an.jpg?ver=6" class="img-responsive center-block"
+  <img id = "bg-image" src="https://www.stackma.ca/images/services/graphics/3d_design/3D-graphic-design.png" class="img-responsive center-block"
   alt="A digital cloud; representing DigiCeipt's cloud vision"
   style="max-height:300px;padding-bottom:50px" >
-</div>
+  <img id = "bg-image" src="https://business.localsearch.com.au/wp-content/uploads/2019/07/website-pricing.png" class="img-responsive center-block"
+  alt="A digital cloud; representing DigiCeipt's cloud vision"
+  style="max-height:300px;padding-bottom:50px" >
+  </div>
 <div class='uploadButton'>
   <a class='route-link' [routerLink]="['/receipts']">
     <button class="getStarted" mat-raised-button color="primary">
