--- a/Client/src/app/welcome/welcome.component.css
+++ b/Client/src/app/welcome/welcome.component.css
@@ -1,5 +1,6 @@
 .uploadButton {
     text-align: center;
+    padding-top: 10px;
 }
 
 .getStarted {
@@ -16,7 +17,9 @@
 }
 
 #bg-image {
-    padding-top: 10px;
+    margin-left: 80px;
+    margin-right: 80px;
+    margin-top: 100px;
 }
 
 .page-title, .page-text {
